System account is shown in Users panel
Relevant information
- GNOME Settings version
46.1
- Operating system (distribution)
Fedora 40
Steps to reproduce:
- Restart system
- Open GNOME Settings
- Select
System
->Users
to open Users panel - Open a terminal, run command
sudo malcontent-client get-app-filter
- the
Users
panel will show the Super User
Expected behavior
Uses panel doesn't show the system accounts(like root).