users-page: Don't show the system accounts

When handling user-added signal, omit the system accounts.

Fixes https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/3066